# lin_reg

./: CMakeLists.txt
include/: lin_reg.h
src/: lin_reg.cpp  main.cpp
